--- a/croma.wrk/index.html
+++ b/croma.wrk/index.html
@@ -9,25 +9,144 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+
   <nav class="navbar navbar-expand-xxl bg-dark navbar-dark">
     <div class="container-fluid">
-      <img src="CromaLogo.svg" alt="">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a href="#" class="nav-link" role="button" data-bs-toggle="dropdown"><span class="navbar-toggler-icon"></span>Menu</a>
-            <ul class="dropdown-menu">
-              <li><a href=""></a>aa</li>
-              <li><a href=""></a>aa</li>
-              <li><a href=""></a>aaa</li>
+        <img src="CromaLogo.svg" alt="">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown"><span class="navbar-toggler-icon"></span>Menu</a>
+                    <ul class="dropdown-menu" style="background-color: whitesmoke;">
+                        <li><a class="dropdown-item" href="#">Exclusive At Croma</a></li>
+                        <li><a class="dropdown-item" href="#">Top Brands</a></li>
+                        <li><a class="dropdown-item" href="#">Croma Store Locator</a></li>
+                        <li><a class="dropdown-item" href="#">Gift Card</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><p class=dropdown-item>Shop By Category</p></li>
+                        <li><a class="dropdown-item" href="#">Television & Accessories</a></li>
+                        <li><a class="dropdown-item" href="#">Home Appliances</a></li>
+                        <li><a class=dropdown-item>Phones & Wearables</a></li>
+                        <li><a class="dropdown-item" href="#">Computers & Tablets</a></li>
+                        <li><a class="dropdown-item" href="#">Kitchen Appliances</a></li>
+                        <li><a class=dropdown-item>Audio & Video</a></li>
+                        <li><a class="dropdown-item" href="#">Health & Fitness</a></li>
+                        <li><a class="dropdown-item" href="#"> Grooming & Personal Care</a></li>
+                        <li><a class=dropdown-item>Cameras & Accessories </a></li>
+                        <li><a class="dropdown-item" href="#">Smart Devices</a></li>
+                        <li><a class="dropdown-item" href="#">Gaming </a></li>
+                        <li><a class="dropdown-item" href="#">Accessories</a></li>
+                        <li><a class="dropdown-item" href="#">ZipCare </a></li>
+                    </ul>
+                </li>
             </ul>
-          </li>
-        </ul>
-      </div>
+            <!-- doubt: -->
+            <form class="">
+                <input class="form-control" type="text" placeholder="What are you looking for?" style="width:200% ;">
+            </form>
+        </div>
     </div>
-  </nav>
+</nav>
+<!-- navbar end: -->
+
+<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="7"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="firstimage.webp" alt="Los Angeles" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="secondimg.webp" alt="Chicago" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="thirdimg.webp" alt="New York" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="fourthimg.webp" alt="Chicago" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="fifthimg.webp" alt="Chicago" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="sixthimg.webp" alt="Chicago" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="seventhimg.webp" alt="Chicago" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+            <img src="eighthimg.webp" alt="Chicago" class="d-block" style="width:100%">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
+</div>
+<div id="scroll" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+      <button type="button" data-bs-target="#scroll" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#scroll" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#scroll" data-bs-slide-to="2"></button>
+      <button type="button" data-bs-target="#scroll" data-bs-slide-to="3"></button>
+      <button type="button" data-bs-target="#scroll" data-bs-slide-to="4"></button>
+      <button type="button" data-bs-target="#scroll" data-bs-slide-to="5"></button>
+      <button type="button" data-bs-target="#scroll" data-bs-slide-to="6"></button>
+      <button type="button" data-bs-target="#scroll" data-bs-slide-to="7"></button>
+  </div>
+  <div class="carousel-inner">
+      <div class="carousel-item active">
+          <img src="mobiles.webp" alt="Los Angeles" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+          <img src="washingmachine.webp" alt="Chicago" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+          <img src="tv.webp" alt="New York" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+          <img src="laptops.webp" alt="Chicago" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+          <img src="AirConditioner.webp" alt="Chicago" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+          <img src="refrigerator.webp" alt="Chicago" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+          <img src="headphones.webp" alt="Chicago" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+          <img src="Coolers.webp" alt="Chicago" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+        <img src="hometheatres.webp" alt="Chicago" class="d-block" style="width:8%">
+      </div>
+      <div class="carousel-item">
+        <img src="Tablets.webp" alt="Chicago" class="d-block" style="width:8%">
+    </div>
+      
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#scroll" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#scroll" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
 </body>
 </html>                      
